--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^20.19.0 || >=22.12.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "dev": "vite",
@@ -27,8 +27,8 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^22.18.11",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
     "@vitest/eslint-plugin": "^1.3.23",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
@@ -40,8 +40,8 @@
     "jsdom": "^27.0.1",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.9.0",
-    "vite": "^7.1.11",
-    "vite-plugin-vue-devtools": "^8.0.3",
+    "vite": "^5.4.21",
+    "vite-plugin-vue-devtools": "^7.7.9",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.1.1"
   }
