--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
+APP_NAME="Real Estate Portfolio"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:5173
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +23,17 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# For local development, use SQLite
 DB_CONNECTION=sqlite
+
+# For production, use MySQL or PostgreSQL
+# Uncomment and configure these for production:
+# DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_DATABASE=your_database_name
+# DB_USERNAME=your_database_user
+# DB_PASSWORD=your_database_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
