Fix backend deployment and connection

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,10 +2,8 @@
 # These are used when running `npm run build`
 
 # Backend API URL (production)
-# IMPORTANT: Replace with your actual production API URL before deploying
-VITE_API_BASE_URL=https://your-api-domain.com/api
+VITE_API_BASE_URL=https://resite-production.up.railway.app/api
 
 # Backend Storage URL (for PDFs and images)
-# IMPORTANT: Replace with your actual production storage URL before deploying
-VITE_STORAGE_BASE_URL=https://your-api-domain.com/storage
+VITE_STORAGE_BASE_URL=https://resite-production.up.railway.app/storage
 
