--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -6,11 +6,10 @@ cmds = ["composer install --optimize-autoloader --no-dev"]
 
 [phases.build]
 cmds = [
-  "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache"
 ]
 
 [start]
-cmd = "php artisan migrate --force && php artisan storage:link && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php artisan config:cache && php artisan migrate --force && php artisan db:seed --force && php artisan storage:link && php artisan serve --host=0.0.0.0 --port=$PORT"
 
