--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,11 +5,8 @@ nixPkgs = ["php82", "php82Packages.composer"]
 cmds = ["composer install --optimize-autoloader --no-dev"]
 
 [phases.build]
-cmds = [
-  "php artisan route:cache",
-  "php artisan view:cache"
-]
+cmds = []
 
 [start]
-cmd = "php artisan config:cache && php artisan migrate --force && php artisan db:seed --force && php artisan storage:link && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php artisan migrate --force && php artisan db:seed --force && php artisan storage:link && php artisan serve --host=0.0.0.0 --port=$PORT"
 
