--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -38,8 +38,12 @@ RUN npm install && npm run build
 RUN mkdir -p storage/framework/{sessions,views,cache,testing} storage/logs bootstrap/cache && \
     chmod -R 777 storage bootstrap/cache
 
+# Copy and make start script executable
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
+
 EXPOSE 8000
 
-# Start command - use exec form to ensure proper signal handling
-CMD ["sh", "-c", "set -x && php artisan migrate --force && echo 'Migrations complete' && (php artisan db:seed --force || echo 'Seeding skipped') && echo 'Running storage:link' && (php artisan storage:link || echo 'Storage link failed') && echo 'Starting server on port '${PORT:-8000} && php artisan serve --host=0.0.0.0 --port=${PORT:-8000} --verbose"]
+# Start command
+CMD ["/start.sh"]
 
