--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "axios": "^1.13.2",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
